--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+      - name: SSH Remote Commands
+        uses: appleboy/ssh-action@v0.1.5
+
       # To use this repository's private action,
       # you must check out the repository
       - name: Checkout
