--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,16 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
+      - name: testingsecrets
+        run: echo "${{ secrets.EC2_USER }}"
       - name: SSH Remote Commands
         uses: appleboy/ssh-action@v0.1.5
-
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: whoami
+          
       # To use this repository's private action,
       # you must check out the repository
       - name: Checkout
@@ -20,3 +27,4 @@ jobs:
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.timeoutputval }}"
+
