--- a/.github/workflows/build-push-ecr.yml
+++ b/.github/workflows/build-push-ecr.yml
@@ -15,10 +15,10 @@ jobs:
       run: mkdir certfiles
       
     - name: create cert crt
-      run: printf "${{ secrets.DOMAIN_CERT }}" > certfiles/johnrshannon.net.crt 
+      run: echo "${{ secrets.DOMAIN_CERT }}" > certfiles/johnrshannon.net.crt 
       
     - name: creaste cert key
-      run: printf "${{ secrets.DOMAIN_CERT_KEY }}" > certfiles/johnrshannon.net.key
+      run: echo "${{ secrets.DOMAIN_CERT_KEY }}" > certfiles/johnrshannon.net.key
       
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
