--- a/.github/workflows/build-push-dockerhub.yml
+++ b/.github/workflows/build-push-dockerhub.yml
@@ -46,4 +46,6 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
-          script: docker pull sryjohn/nginx_webserver:main
+          script: |
+            docker pull sryjohn/nginx_webserver:main
+            docker run -p 80:80 -p 443:443 nginx_webserver:main
