--- a/.github/workflows/build-push-dockerhub.yml
+++ b/.github/workflows/build-push-dockerhub.yml
@@ -47,5 +47,6 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
+            sudo yum -y install docker
             docker pull sryjohn/nginx_webserver:main
             docker run -d -p 80:80 -p 443:443 sryjohn/nginx_webserver:main
