--- a/.github/workflows/build-push-dockerhub.yml
+++ b/.github/workflows/build-push-dockerhub.yml
@@ -48,5 +48,6 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             sudo yum -y install docker
+            sudo service docker start
             docker pull sryjohn/nginx_webserver:main
             docker run -d -p 80:80 -p 443:443 sryjohn/nginx_webserver:main
