edited workflow for aws creds

--- a/.github/workflows/build-push-ecr.yml
+++ b/.github/workflows/build-push-ecr.yml
@@ -10,7 +10,24 @@ jobs:
 
     - name: Check out code
       uses: actions/checkout@v2
-      
+    
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_YONI_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_YONI_SECRET_ACCESS_KEY }}
+        aws-region: us-east-2
+
+    - name: Deploy to AWS CloudFormation
+      uses: aws-actions/aws-cloudformation-github-deploy@v1
+      with:
+        name: HelloWorlderWebApp
+        template: HelloWorldWebApp.yaml
+        
+    - name: Sleep for 30 seconds
+      run: sleep 180s
+      shell: bash
+  
     - name: make dir for certs
       run: mkdir certfiles
       
