--- a/.github/workflows/build-push-dockerhub.yml
+++ b/.github/workflows/build-push-dockerhub.yml
@@ -11,6 +11,23 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
       
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_YONI_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_YONI_SECRET_ACCESS_KEY }}
+        aws-region: us-east-2
+      
+    - name: Deploy to AWS CloudFormation
+      uses: aws-actions/aws-cloudformation-github-deploy@v1
+      with:
+        name: HelloWorlderWebApp
+        template: HelloWorldWebApp.yaml
+        
+    - name: Sleep for 30 seconds
+      run: sleep 180s
+      shell: bash
+      
     - name: Log in to Docker Hub
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
